# ELFRelocs.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml
ELFRelocs/: __init__.py  relocEnums.py  relocImpls.py
ELFRelocs/libs/: LIEF.py
tests/: tests.py
