[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ELFRelocs"
readme = "ReadMe.md"
description = "Calculates relocated addresses for pointers in ELF binaries"
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ELF", "relocation"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	"ELFMachine" # @ git+https://codeberg.org/KOLANICH-libs/ELFMachine.py
]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/ELFRelocs.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["ELFRelocs", "ELFRelocs.*"]

[tool.setuptools_scm]
